--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Simon Game</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
 </head>
 
@@ -25,7 +24,7 @@
                 <div class="menu-middle">
                     <div class="count">
                         <div class="count-display">
-                            <div class="display-text">00</div>
+                            <div class="display-text"></div>
                         </div> COUNT</div>
                     <div class="start">
                         <div class="start-button mb"></div> START</div>
@@ -44,6 +43,12 @@
         </div>
     </div>
 
+    <audio data-key="0" src="https://s3.amazonaws.com/freecodecamp/simonSound1.mp3"></audio>
+    <audio data-key="1" src="https://s3.amazonaws.com/freecodecamp/simonSound2.mp3"></audio>
+    <audio data-key="2" src="https://s3.amazonaws.com/freecodecamp/simonSound3.mp3"></audio>
+    <audio data-key="3" src="https://s3.amazonaws.com/freecodecamp/simonSound4.mp3"></audio>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
