finished most of work

--- a/index.html
+++ b/index.html
@@ -50,5 +50,6 @@
 
     <script src="script.js"></script>
 </body>
+<footer>by <a href="https://gabrieldezan.netlify.com" target="blank">gdezan</a></footer>
 
 </html>
